[gd_scene load_steps=3 format=3 uid="uid://b7xwpb6f867lh"]

[ext_resource type="PackedScene" uid="uid://pavgwd0djbid" path="res://scenes/controllers/main_controller.tscn" id="1_j17lp"]
[ext_resource type="Script" path="res://scripts/main_controller.gd" id="2_8vb07"]

[node name="Root" type="Node"]

[node name="MainController" parent="." instance=ExtResource("1_j17lp")]
script = ExtResource("2_8vb07")

[node name="UI" type="Node" parent="MainController"]

[node name="MultiplayerOptionMenu" type="VBoxContainer" parent="MainController/UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -77.0
offset_right = 150.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="Connect" type="Button" parent="MainController/UI/MultiplayerOptionMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Connect"

[node name="Host" type="Button" parent="MainController/UI/MultiplayerOptionMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Host"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="MainController"]
_spawnable_scenes = PackedStringArray("res://scenes/objects/player.tscn", "res://scenes/objects/projectile.tscn")
spawn_path = NodePath("../Map")

[node name="Map" type="Node2D" parent="MainController"]

[connection signal="pressed" from="MainController/UI/MultiplayerOptionMenu/Connect" to="MainController" method="on_connect_pressed"]
[connection signal="pressed" from="MainController/UI/MultiplayerOptionMenu/Host" to="MainController" method="on_host_pressed"]
